--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@polymath-ai/client",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "A JavaScript client library to run Polymath",
   "main": "main.js",
   "module": "main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,10 @@
   "homepage": "https://github.com/polymath-ai/polymath-js-client#readme",
   "dependencies": {
     "esm": "^3.2.25",
+    "gpt-3-encoder": "^1.1.4",
     "openai": "^3.1.0"
+  },
+  "devDependencies": {
+    "ava": "^5.2.0"
   }
 }
