--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "devDependencies": {
     "@remix-run/dev": "^1.11.1",
     "@remix-run/eslint-config": "^1.11.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.8.4"
   },
   "engines": {
