Read all of the completion options including prompt_template on command line

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "name": "@polymath-ai/cli",
+{
+  "name": "@polymath-ai/cli",
   "version": "0.0.3",
   "description": "A CLI for Polymath",
   "main": "src/cli.js",
@@ -30,7 +31,7 @@
   },
   "homepage": "https://github.com/polymath-ai/cli#readme",
   "dependencies": {
-    "@polymath-ai/client": "^1.0.12",
+    "@polymath-ai/client": "^1.0.13",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "esm": "^3.2.25",
