--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -36,5 +36,8 @@
     "commander": "^10.0.0",
     "esm": "^3.2.25",
     "inquirer": "^9.1.4"
+  },
+  "devDependencies": {
+    "ava": "^5.2.0"
   }
 }
