--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@polymath-ai/client",
-  "version": "1.0.13",
+  "version": "1.1.0",
   "description": "A JavaScript client library to run Polymath",
-  "main": "main.js",
-  "module": "main.js",
+  "main": "src/main.js",
+  "module": "src/main.js",
   "type": "module",
   "scripts": {
     "test": "ava"
