--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "description": "A JavaScript client library to run Polymath",
   "main": "src/main.js",
-  "module": "src/main.js",
+  "exports": "./src/main.js",
   "type": "module",
   "scripts": {
     "test": "ava"
