--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
+    "find-up": "^6.3.0",
     "globby": "^13.1.3",
     "gpt-3-encoder": "^1.1.4",
     "openai": "^3.1.0",
