Name `firebase` package correctly.

--- a/seeds/firebase/package.json
+++ b/seeds/firebase/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "functions",
+  "name": "@polymath-ai/firebase-seed",
   "type": "module",
   "description": "Cloud Functions for Firebase",
   "scripts": {
