Introduce `core/infra`. Also first working `tsconfig`. Part of chore: TypeScript. For Alex. And others. #9

--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@polymath-ai/infra": "*",
     "ava": "^5.2.0",
     "mock-fs": "^5.2.0"
   }
