--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/polymath-ai/polymath-ai#readme",
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "ava": "^5.2.0"
+    "ava": "^5.2.0",
+    "typescript": "^4.9.5"
   },
   "workspaces": [
     "./core/*",
