Elevate `npm run build` to root. Part of chore: TypeScript. For Alex. And others. #9

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "build": "npx tsc --build"
   },
   "repository": {
     "type": "git",
