Format root `tsconfig.json`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,5 @@
 {
   "extends": "@polymath-ai/infra/tsconfig/base.json",
   "files": [],
-  "references": [
-    { "path": "core/cli" }
-  ]
+  "references": [{ "path": "core/cli" }]
 }
