--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -29,6 +29,14 @@
     "url": "https://github.com/polymath-ai/cli/issues"
   },
   "homepage": "https://github.com/polymath-ai/cli#readme",
+  "ava": {
+    "typescript": {
+      "rewritePaths": {
+        "src/": "dist/"
+      },
+      "compile": false
+    }
+  },
   "dependencies": {
     "@polymath-ai/client": "^1.1.2",
     "chalk": "^5.2.0",
