--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -11,7 +11,8 @@
     "access": "public"
   },
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "build": "npx tsc --build"
   },
   "repository": {
     "type": "git",
