--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "turbo run test",
-    "build": "turbo run build"
+    "test": "echo use 'turbo test' instead",
+    "build": "echo use 'turbo build' instead"
   },
   "repository": {
     "type": "git",
