--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -31,6 +31,9 @@
   },
   "homepage": "https://github.com/polymath-ai/cli#readme",
   "ava": {
+    "files": [
+      "tests/**/*.ts"
+    ],
     "typescript": {
       "rewritePaths": {
         "./": "dist/"
