--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,10 @@
     "test": {
       "dependsOn": ["build", "^test"]
     },
+    "watch": {
+      "persistent": true,
+      "cache": false
+    },
     "lint": {}
   }
 }
