--- a/core/cli/tsconfig.json
+++ b/core/cli/tsconfig.json
@@ -3,6 +3,6 @@
     "composite": true,
     "outDir": "./dist"
   },
-  "exclude": ["node_modules", "dist"],
+  "include": ["src/**/*", "tests/**/*"],
   "extends": "@polymath-ai/infra/tsconfig/base.json"
 }
