Only publish what's necessary. Fixes Make sure only `dist` is published  #32.

--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -31,6 +31,10 @@
     "url": "https://github.com/polymath-ai/cli/issues"
   },
   "homepage": "https://github.com/polymath-ai/cli#readme",
+  "files": [
+    "dist",
+    "index.js"
+  ],
   "ava": {
     "files": [
       "tests/**/*.ts"
