--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@polymath-ai/infra/tsconfig/base.json",
   "files": [],
-  "references": [{ "path": "core/cli" }]
+  "references": [{ "path": "core/cli" }, { "path": "core/validation" }]
 }
