Call `@polymath-ai/validation` from `core/client`.
Part of Thoroughly validate Polymath format, inputs, and outputs #33.

--- a/core/client/package.json
+++ b/core/client/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/polymath-ai/polymath-js-client#readme",
   "dependencies": {
+    "@polymath-ai/validation": "*",
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "find-up": "^6.3.0",
