--- a/core/client/package.json
+++ b/core/client/package.json
@@ -2,11 +2,13 @@
   "name": "@polymath-ai/client",
   "version": "1.1.2",
   "description": "A JavaScript client library to run Polymath",
-  "main": "src/main.js",
-  "exports": "./src/main.js",
+  "main": "dist/src/main.js",
+  "exports": "./dist/src/main.js",
   "type": "module",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "build": "tsc --b",
+    "watch": "tsc --b --watch"
   },
   "repository": {
     "type": "git",
