--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@polymath-ai/client": "^1.1.2",
+    "@polymath-ai/types": "*",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "esm": "^3.2.25",
