--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@polymath-ai/client": "^1.1.2",
     "@polymath-ai/types": "*",
+    "@types/node": "^18.15.5",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "esm": "^3.2.25",
