--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "homepage": "https://github.com/polymath-ai/polymath-ai#readme",
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "ava": "^5.2.0",
+    "eslint": "^8.36.0",
     "typescript": "^4.9.5"
   },
   "workspaces": [
