--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
   "references": [
     { "path": "core/cli" },
     { "path": "core/validation" },
-    { "path": "core/client" }
+    { "path": "core/client" },
+    { "path": "core/types" },
+    { "path": "core/ingest" }
   ]
 }
