Sow seeds of discord. Part of Implement a simple Polymath discord bot #39

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     { "path": "core/validation" },
     { "path": "core/client" },
     { "path": "core/types" },
-    { "path": "core/ingest" }
+    { "path": "core/ingest" },
+    { "path": "seeds/discord" }
   ]
 }
