Add npm scripts to `seeds/discord`.

--- a/seeds/discord/package.json
+++ b/seeds/discord/package.json
@@ -4,7 +4,9 @@
   "description": "A simple Polymath discord bot",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava",
+    "build": "tsc --b",
+    "watch": "tsc --b --watch"
   },
   "repository": {
     "type": "git",
@@ -12,7 +14,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/polymath-ai/polymath-ai/issues"
   },
