--- a/seeds/discord/package.json
+++ b/seeds/discord/package.json
@@ -2,10 +2,11 @@
   "name": "discord",
   "version": "0.0.1",
   "description": "A simple Polymath discord bot",
-  "main": "src/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "test": "ava",
     "build": "tsc --b",
+    "register": "tsc -b && node dist/src/register.js",
     "watch": "tsc --b --watch"
   },
   "repository": {
@@ -19,11 +20,23 @@
     "url": "https://github.com/polymath-ai/polymath-ai/issues"
   },
   "homepage": "https://github.com/polymath-ai/polymath-ai#readme",
+  "ava": {
+    "files": [
+      "tests/**/*.ts"
+    ],
+    "typescript": {
+      "rewritePaths": {
+        "./": "dist/"
+      },
+      "compile": false
+    }
+  },
   "dependencies": {
     "@polymath-ai/client": "*",
     "@polymath-ai/types": "*",
     "@polymath-ai/validation": "*",
-    "@types/node": "^18.15.5"
+    "@types/node": "^18.15.5",
+    "discord.js": "^14.8.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
@@ -31,6 +44,7 @@
     "@typescript-eslint/parser": "^5.56.0",
     "ava": "^5.2.0",
     "eslint": "^8.36.0",
+    "nodemon": "^2.0.22",
     "typescript": "^4.9.5"
   }
 }
