--- a/seeds/discord/package.json
+++ b/seeds/discord/package.json
@@ -7,6 +7,7 @@
     "test": "ava",
     "build": "tsc --b",
     "register": "tsc -b && node dist/src/register.js",
+    "dev": "nodemon --watch dist",
     "watch": "tsc --b --watch"
   },
   "repository": {
