--- a/core/ingest/package.json
+++ b/core/ingest/package.json
@@ -48,6 +48,7 @@
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "esm": "^3.2.25",
+    "html-to-text": "^9.0.5",
     "i": "^0.3.7",
     "inquirer": "^9.1.4",
     "npm": "^9.6.2",
@@ -57,6 +58,7 @@
     "@ava/typescript": "^3.0.1",
     "@changesets/cli": "^2.26.0",
     "@polymath-ai/infra": "*",
+    "@types/html-to-text": "^9.0.0",
     "@types/inquirer": "^9.0.3",
     "@types/mock-fs": "^4.13.1",
     "ava": "^5.2.0",
