Use new multi-prompt setup.

--- a/seeds/discord/package.json
+++ b/seeds/discord/package.json
@@ -39,7 +39,8 @@
     "@polymath-ai/types": "*",
     "@polymath-ai/validation": "*",
     "@types/node": "^18.15.5",
-    "discord.js": "^14.8.0"
+    "discord.js": "^14.8.0",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
