Restart nodemon on prompt changes.

--- a/seeds/discord/package.json
+++ b/seeds/discord/package.json
@@ -9,7 +9,7 @@
     "build": "tsc --b",
     "start": "npm run build && node .",
     "register": "tsc -b && node dist/src/register.js",
-    "dev": "nodemon -w ./src -e ts,json --exec 'npm run start'",
+    "dev": "nodemon -w ./src -e ts,json,txt --exec 'npm run start'",
     "watch": "tsc --b --watch"
   },
   "repository": {
