--- a/kits/remix/package.json
+++ b/kits/remix/package.json
@@ -9,7 +9,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@polymath-ai/client": "^1.0.9",
+    "@polymath-ai/client": "^2.0.0",
     "@polymath-ai/types": "*",
     "@remix-run/node": "^1.11.1",
     "@remix-run/react": "^1.11.1",
@@ -31,5 +31,6 @@
   },
   "engines": {
     "node": ">=14"
-  }
+  },
+  "version": null
 }
