Name `seeds/discord` package properly.

--- a/seeds/discord/package.json
+++ b/seeds/discord/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord",
+  "name": "@polymath-ai/discord-seed",
   "version": "0.0.1",
   "description": "A simple Polymath discord bot",
   "type": "module",
