Stub out `core/host`.
Part of #58.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "references": [
     { "path": "core/cli" },
     { "path": "core/validation" },
+    { "path": "core/host" },
     { "path": "core/client" },
     { "path": "core/types" },
     { "path": "core/ingest" },
