--- a/core/host/package.json
+++ b/core/host/package.json
@@ -46,7 +46,8 @@
   "dependencies": {
     "@polymath-ai/types": "*",
     "@polymath-ai/validation": "*",
-    "@types/node": "^18.15.5"
+    "@types/node": "^18.15.5",
+    "globby": "^13.1.3"
   },
   "devDependencies": {
     "@ava/typescript": "^3.0.1",
