--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -48,13 +48,15 @@
   },
   "dependencies": {
     "@polymath-ai/client": "^2.0.1",
+    "@polymath-ai/ingest": "*",
     "@polymath-ai/types": "*",
     "@polymath-ai/validation": "*",
-    "@polymath-ai/ingest": "*",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.5",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "esm": "^3.2.25",
+    "express": "^4.18.2",
     "inquirer": "^9.1.4"
   },
   "devDependencies": {
