--- a/core/db/package.json
+++ b/core/db/package.json
@@ -38,6 +38,13 @@
     "@ava/typescript": "^4.0.0",
     "@polymath-ai/infra": "^0.0.1",
     "ava": "^5.2.0",
+    "tmp-promise": "^3.0.3",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@polymath-ai/types": "*",
+    "duckdb": "^0.7.1",
+    "hnswlib-node": "^1.4.2",
+    "make-dir": "^3.1.0"
   }
 }
