--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -52,12 +52,14 @@
     "@polymath-ai/types": "*",
     "@polymath-ai/validation": "*",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.5",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "inquirer": "^9.1.4"
+    "inquirer": "^9.1.4",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@ava/typescript": "^3.0.1",
