--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -50,6 +50,7 @@
     "@polymath-ai/client": "^2.0.3",
     "@polymath-ai/ingest": "*",
     "@polymath-ai/types": "*",
+    "@polymath-ai/host": "*",
     "@polymath-ai/validation": "*",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
