Fix a weird ava bug where it interacts with glibc.
https://github.com/lovell/sharp/issues/3164

--- a/core/client/package.json
+++ b/core/client/package.json
@@ -32,6 +32,7 @@
     "files": [
       "tests/**/*.ts"
     ],
+    "workerThreads": false,
     "typescript": {
       "rewritePaths": {
         "./": "dist/"
