--- a/core/db/package.json
+++ b/core/db/package.json
@@ -20,6 +20,7 @@
     "files": [
       "tests/**/*.ts"
     ],
+    "workerThreads": false,
     "typescript": {
       "rewritePaths": {
         "./": "dist/"
