--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@changesets/cli": "^2.26.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "@types/node": "^18.15.5",
     "ava": "^5.2.0",
     "eslint": "^8.36.0",
     "typescript": "^4.9.5"
