--- a/core/client/package.json
+++ b/core/client/package.json
@@ -50,7 +50,7 @@
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "find-up": "^6.3.0",
-    "gpt-3-encoder": "^1.1.4",
+    "gptoken": "^0.1.0",
     "htmlparser2": "^8.0.2",
     "http-link-header": "^1.1.0",
     "pinecone-client": "^1.0.1",
