--- a/core/client/package.json
+++ b/core/client/package.json
@@ -6,9 +6,9 @@
   "exports": "./dist/src/main.js",
   "type": "module",
   "scripts": {
-    "test": "ava",
-    "build": "tsc --b",
-    "watch": "tsc --b --watch"
+    "test": "FORCE_COLOR=1 ava",
+    "build": "FORCE_COLOR=1 tsc --b",
+    "watch": "FORCE_COLOR=1 tsc --b --watch"
   },
   "repository": {
     "type": "git",
