--- a/core/db/package.json
+++ b/core/db/package.json
@@ -5,9 +5,9 @@
   "main": "./dist/src/index.js",
   "type": "module",
   "scripts": {
-    "test": "ava",
-    "build": "tsc --b",
-    "watch": "tsc --b --watch"
+    "test": "FORCE_COLOR=1 ava",
+    "build": "FORCE_COLOR=1 tsc --b",
+    "watch": "FORCE_COLOR=1 tsc --b --watch"
   },
   "repository": {
     "type": "git",
