--- a/seeds/discord/package.json
+++ b/seeds/discord/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "main": "dist/src/index.js",
   "scripts": {
-    "test": "ava",
-    "build": "tsc --b",
-    "start": "npm run build && node .",
-    "register": "tsc -b && node dist/src/register.js",
-    "dev": "nodemon -w . -e ts,json,txt --exec 'npm run start'",
-    "watch": "tsc --b --watch"
+    "test": "FORCE_COLOR=1 ava",
+    "build": "FORCE_COLOR=1 tsc --b",
+    "start": "FORCE_COLOR=1 npm run build && node .",
+    "register": "FORCE_COLOR=1 tsc -b && node dist/src/register.js",
+    "dev": "FORCE_COLOR=1 nodemon -w . -e ts,json,txt --exec 'npm run start'",
+    "watch": "FORCE_COLOR=1 tsc --b --watch"
   },
   "repository": {
     "type": "git",
