A working `@polymath-ai/ai`.

--- a/core/client/package.json
+++ b/core/client/package.json
@@ -41,6 +41,7 @@
     }
   },
   "dependencies": {
+    "@polymath-ai/ai": "*",
     "@polymath-ai/host": "*",
     "@polymath-ai/types": "*",
     "@polymath-ai/validation": "*",
