--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -49,6 +49,7 @@
     }
   },
   "dependencies": {
+    "@polymath-ai/ai": "*",
     "@polymath-ai/client": "^2.0.3",
     "@polymath-ai/host": "*",
     "@polymath-ai/ingest": "*",
