--- a/seeds/playground/package.json
+++ b/seeds/playground/package.json
@@ -44,7 +44,8 @@
     "@clack/prompts": "^0.6.3",
     "@polymath-ai/ai": "*",
     "commander": "^10.0.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "jsonschema": "^1.4.1"
   },
   "devDependencies": {
     "@ava/typescript": "^4.0.0",
