--- a/seeds/playground/package.json
+++ b/seeds/playground/package.json
@@ -45,6 +45,7 @@
     "@polymath-ai/ai": "*",
     "commander": "^10.0.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jsonschema": "^1.4.1"
   },
   "devDependencies": {
