--- a/seeds/playground/package.json
+++ b/seeds/playground/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@clack/prompts": "^0.6.3",
     "@codemirror/lang-markdown": "^6.1.1",
+    "@codemirror/language-data": "^6.3.1",
     "@polymath-ai/ai": "*",
     "codemirror": "^6.0.1",
     "commander": "^10.0.1",
